--- a/international.tex
+++ b/international.tex
@@ -37,7 +37,7 @@ while \XeLaTeX{} is a bit more flexible and also
 accepts \mbox{\acronym{utf}-16} and
 \mbox{\acronym{utf}-32}.}
 Make sure that the fonts you select contain the needed glyphs---many
-only provide support for Latin languages.
+only contain ones for Latin languages.
 
 \section{The polyglossia package}
 
