--- a/punctuation.tex
+++ b/punctuation.tex
@@ -5,7 +5,7 @@ You would much rather encounter a panda that eats
 shoots and leaves than one that eats, shoots,
 and leaves.\punckern\endnote{Lynne Truss,
 \textit{Eats, Shoots \& Leaves} (New York, 2003)}
-The only difference is punctuation,
+Punctuation is a vital part of good writing,
 and there's more to it than your keyboard suggests.
 
 \section{Quotation marks}
@@ -44,7 +44,7 @@ quotes a former \acronym{us} president as,
 Though they look similar,
 hyphens (\,-\,), en dashes (\,--\,),
 em dashes (\,---\,), and minus signs (\,$-$\,)
-have different uses:
+serve different purposes:
 \begin{description}
 \item[Hyphens] have a few uses:\endnote{Butterick,
     ``Hyphens and dashes''\quotekern,
@@ -56,7 +56,7 @@ have different uses:
         \LaTeX{} handles this automatically,
         so you don't have to worry about manually inserting hyphens for this
         reason.
-    \item Some compound words use hyphens, like \emph{long-range},
+    \item Some compound words use hyphens, like \emph{long-range}
         and \emph{field-effect}.
     \item They are used in phrasal adjectives.
         If I ask for ``five dollar bills''\punckern,
@@ -69,7 +69,7 @@ have different uses:
     or separations such as the ``US--Canada border''\quotekern.
 
 \item[Em dashes] can be used to separate clauses of a sentence.
-    Other punctuation marks---like parenthesis or commas---can play a similar
+    Other punctuation marks---like parenthesis or commas---play a similar
     role.
 
 \item[Minus signs] are used exclusively in mathematical expressions.
@@ -87,7 +87,7 @@ They are set using \verb|\ldots|.
 I'm\ldots{} not sure.
 \end{lstlisting}
 \end{leftfigure}
-sets
+becomes
 \begin{leftfigure}
 \lm%
 I'm\ldots{} not sure.
@@ -127,7 +127,17 @@ produces
 \lm%
 Launch in 2\,h 10\,m.
 \end{leftfigure}
-
+Thin spaces are also useful when separating single and double quotation marks.
+\begin{leftfigure}
+\begin{lstlisting}
+``She exclaimed, `I can't believe it!'\,''
+\end{lstlisting}
+\end{leftfigure}
+gives us the quote:
+\begin{leftfigure}
+\lm%
+``She exclaimed, `I can't believe it!'\,''
+\end{leftfigure}
 
 \section{What next?}
 \begin{itemize}
