--- a/math.tex
+++ b/math.tex
@@ -5,11 +5,11 @@ e.g., $x_n^2+y_n^2=r^2$, and as standalone formulas:
 \[\sum_{n=0}^{\infty} \frac{f^{(n)} (a)}{n!} (x - a)^n\]
 The former is created with \verb|$...$| or \verb|\(...\)|,
 and the latter with \verb|\[...\]|.
-Inside these environments, the rules of \LaTeX{} change:
+Inside these math environments, the rules of \LaTeX{} change:
 \begin{itemize}
 \item Most spaces and line breaks are ignored completely,
     and the engine usually makes spacing decisions for you based on
-    typographical conventions for math.
+    typographical conventions for mathematics.
     \verb|$x+y+z$| and \verb|$x + y + z$| both give you $x+y+z$.
 \item Empty lines are not allowed---each formula must occupy a single
     ``paragraph''\quotekern.
@@ -33,7 +33,7 @@ Typesetting mathematics is arguably the raison d'être of
 it decent coverage would take up half the book.
 Given how wide the field of mathematics is,
 there are \emph{many} different commands and environments.
-Here, more so than anywhere else,
+Here, more so than any other topic,
 you owe it to yourself to find some real references and learn what the system
 is capable of.
 Before moving on, though, let's show some examples of what \LaTeX{}
