--- a/structure.tex
+++ b/structure.tex
@@ -15,11 +15,11 @@ Hello, World!
 \end{document}
 \end{lstlisting}
 \end{leftfigure}
-The space between the \verb|\documentclass| and \verb|\begin{document}|
-is called the \introduce{preamble}.
+The space between the \verb|\documentclass| command and the start of the
+\texttt{document} environment is called the \introduce{preamble}.
 Here, we perform any setup we need---such as importing packages
-and defining commands---to control how the body of our document
-(between \verb|\begin{document}| and \verb|\end{document}|) looks.
+and defining commands---to control how our document
+should look.
 As mentioned briefly in \chapref{installation},
 \introduce{packages} are bits of code that can modify your document
 in interesting ways.
@@ -38,7 +38,7 @@ They can do all sorts of things, like:
 To import a package, add a \verb|\usepackage| command to the preamble,
 with the package's name as the argument.
 As a simple example, let's make a document with the \texttt{metalogo}
-package, which adds \verb|\LuaLaTeX| and \verb|\XeLaTeX| commands:
+package, which adds \verb|\LuaLaTeX| and \verb|\XeLaTeX| commands.
 \begin{leftfigure}
 \begin{lstlisting}
 \documentclass{article}
@@ -56,10 +56,12 @@ should get you a \textsc{pdf} that reads
 \lm \XeLaTeX{} and \LuaLaTeX{} are neat.
 \end{leftfigure}
 \end{samepage}
-Like other commands, \verb|\usepackage| can take optional arguments.
+Like other commands, \verb|\usepackage| accepts optional arguments.
 The \texttt{geometry} package, for instance,
 can take your desired paper size and margins.
-For \acronym{us} letter paper with one-inch margins, you type:
+For \acronym{us} letter paper with one-inch margins, you type:\footnote{Note
+that document arguments can be spaced in whatever way is most convenient to you,
+so long as there are no empty lines between arguments.}
 \begin{leftfigure}
 \begin{lstlisting}
 \usepackage[letterpaper,
@@ -82,7 +84,7 @@ We won't discuss how to use plain \TeX{} here. That's for another book---the
 \TeX book.}
 at \url{https://ctan.org}.
 The manuals for every single package can also be found there,
-so it should be your first stop when learning how to use a new one.
+so it should be your first stop when learning how to use one.
 
 \section{Titles, sections, and tables of contents}
 
@@ -90,8 +92,8 @@ Authors often create hierarchy to help readers navigate their work.
 \LaTeX{} provides seven different commands to break apart your document:
 \verb|\part|, \verb|\chapter|, \verb|\section|, \verb|\subsection|,
 \verb|\subsubsection|, \verb|\paragraph|, and \verb|\subparagraph|.
-To use one, just issue the command in your document where you want that section
-to start.
+To use one, issue the command where you want that section to start,
+using the section's name as the argument.
 For example,
 \begin{leftfigure}
 \begin{lstlisting}
@@ -117,7 +119,7 @@ you've chosen. Parts and chapters, for example, only appear in books.
 And don't go too crazy with these commands.
 Most works only need a few levels of hierarchy.
 
-Levels are automatically numbered---for example,
+Sections are automatically numbered---for example,
 the title of this chapter was produced with \verb|\chapter{Document Structure}|,
 and \LaTeX{} automatically determined that it was chapter number \ref{structure}.
 You can also have \LaTeX{} automatically generate a table of contents for you
