History: s/Most serious/Most/
This isn't just a book for Serious Programmers™.

--- a/history.tex
+++ b/history.tex
@@ -1,7 +1,7 @@
 \chapter{A Brief History of \texorpdfstring{\LaTeX}{LaTeX}}
 \label{history}
 
-Most serious programmers have heard of Donald Knuth,
+Many programmers have heard of Donald Knuth,
 the man who coined the term \emph{analysis of algorithms} in 1968
 and pioneered many of the computer science fundamentals we use today.
 Knuth is perhaps most famous for his ongoing magnum opus,
