Structure: Mention \input

--- a/structure.tex
+++ b/structure.tex
@@ -145,4 +145,5 @@ that make it easy to customize nearly every aspect of your document,
 from section heading fonts to footnotes.
 \item Include images using the \texttt{graphicx} package.
 \item Add hyperlinks to your \acronym{pdf} using the \texttt{hyperref} package.
+\item Split large documents into multiple files using \verb|\input|.
 \end{itemize}
