Intro: s/render/draw
Try to stay light on programmer jargon.

--- a/why.tex
+++ b/why.tex
@@ -16,7 +16,7 @@ When you are ready, \LaTeX{} generates your document from this file
 based on the formatting rules you gave it.
 If you've done any web development, this is a similar process---just
 as \acronym{html} and \acronym{css} describe the page you want
-browsers to render, your markup describes the appearance of your
+browsers to draw, your markup describes the appearance of your
 document to \LaTeX.
 
 \begin{leftfigure}
@@ -29,7 +29,7 @@ When you are ready, \LaTeX{} generates your document from this file
 based on the formatting rules you gave it.
 If you've done any web development, this is a similar process---just
 as \acronym{html} and \acronym{css} describe the page you want
-browsers to render, your markup describes the appearance of your
+browsers to draw, your markup describes the appearance of your
 document to \LaTeX.
 \end{lstlisting}
 \captionof{figure}{The \LaTeX{} markup for the above paragraph}
