--- a/latex-book.tex
+++ b/latex-book.tex
@@ -36,7 +36,10 @@
 \setmainfont[
     Ligatures=TeX,
     Numbers={Proportional,Lowercase},
-    WordSpace=1.3,
+    % Coefficients for font-provided space, stretch, and shrink.
+    % Garamond Premier is a bit tighter than Adobe Garamond,
+    % but stretching it out about 30% gives about the same metrics.
+    WordSpace={1.3,1.3,1},
     UprightFeatures={
         SizeFeatures={
             {Size={-9},Font=garamondpremrpro-capt},
