Fiddle with intro more
The first page is the most important.
Let's have lots of hand-wringing over it.

--- a/why.tex
+++ b/why.tex
@@ -10,10 +10,10 @@ Apple Pages, Google Docs, or LibreOffice Writer.
 
 Unlike these other applications, which work on the principle of
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)},
-\LaTeX{} documents are built from a ``plain'' text file,
+a \LaTeX{} document is written as a ``plain'' text file,
 using \introduce{markup} to specify how things should look.
-When you are ready, \LaTeX{} generates your document from this file
-based on the formatting rules you gave it.
+\LaTeX{} then takes this source file and builds your document
+based on the formatting rules you give it.
 If you've done any web development, this is a similar process---just
 as \acronym{html} and \acronym{css} describe the page you want
 browsers to draw, your markup describes the appearance of your
@@ -23,10 +23,10 @@ document to \LaTeX.
 \begin{lstlisting}
 Unlike these other applications, which work on the principle of
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)},
-\LaTeX{} documents are built from a ``plain'' text file,
+a \LaTeX{} document is written as a ``plain'' text file,
 using \introduce{markup} to specify how things should look.
-When you are ready, \LaTeX{} generates your document from this file
-based on the formatting rules you gave it.
+\LaTeX{} then takes this source file and builds your document
+based on the formatting rules you give it.
 If you've done any web development, this is a similar process---just
 as \acronym{html} and \acronym{css} describe the page you want
 browsers to draw, your markup describes the appearance of your
@@ -41,9 +41,10 @@ However, it comes with a few advantages:
 \item You can handle a document's contents and its presentation separately.
     At the beginning of each document,
     you describe the design you want.
-    From there, \LaTeX{} handles the rest for you,
-    keeping fonts, sizes, line heights,
-    and other layout considerations consistent across your whole text.
+    \LaTeX{} takes it from there,
+    keeping fonts, sizes, layout,
+    and other formatting considerations consistent across your
+    whole text.
     Compare this to a \acronym{wysiwyg} system,
     where you must constantly concern yourself with your work's appearance
     as you write.
